flux-components/keycloak/ingress-http/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
spec:
  ingressClassName: ${INGRESS_CLASS}
  rules:
    - host: identity.${DOMAIN}
      http:
        paths:
          - path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
